Made the search button icon better

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
     width: calc(100% - 100px);
   }
   
-.custom-button {
+.search-button {
     margin: 0.5em;
   border-radius: 50%;
   border: none;
